--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,13 +3,10 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'me.tatarka:gradle-retrolambda:3.2.3'
   }
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
   defaultPublishConfig "debug"
@@ -45,28 +42,28 @@ android {
     disable 'InvalidPackage'  // Some libraries have issues with this
     disable 'OldTargetApi'    // Due to Robolectric that modifies the manifest when running tests
   }
-  buildToolsVersion '25.0.0'
+  buildToolsVersion '27.0.3'
 }
 
 dependencies {
   def dataDependencies = rootProject.ext.dataDependencies
   def testDependencies = rootProject.ext.dataTestDependencies
 
-  compile project(':domain')
-  provided dataDependencies.javaxAnnotation
-  compile dataDependencies.javaxInject
-  compile dataDependencies.okHttp
-  compile dataDependencies.gson
-  compile dataDependencies.rxJava
-  compile dataDependencies.rxAndroid
-  compile dataDependencies.androidAnnotations
-  compile dataDependencies.retrofit
-  compile dataDependencies.retrofitCoverter
-  compile dataDependencies.interceptor
-  compile dataDependencies.retrofitAdapter
+  implementation project(':domain')
+  compileOnly dataDependencies.javaxAnnotation
+  implementation dataDependencies.javaxInject
+  implementation dataDependencies.okHttp
+  implementation dataDependencies.gson
+  implementation dataDependencies.rxJava
+  implementation dataDependencies.rxAndroid
+  implementation dataDependencies.androidAnnotations
+  implementation dataDependencies.retrofit
+  implementation dataDependencies.retrofitCoverter
+  implementation dataDependencies.interceptor
+  implementation dataDependencies.retrofitAdapter
 
-  testCompile testDependencies.junit
-  testCompile testDependencies.assertj
-  testCompile testDependencies.mockito
-  testCompile testDependencies.robolectric
+  testImplementation testDependencies.junit
+  testImplementation testDependencies.assertj
+  testImplementation testDependencies.mockito
+  testImplementation testDependencies.robolectric
 }
