--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,92 +1,96 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-  def globalConfiguration = rootProject.extensions.getByName("ext")
+    def globalConfiguration = rootProject.extensions.getByName("ext")
 
-  compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
-  buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
+    compileSdkVersion globalConfiguration.getAt("androidCompileSdkVersion")
+    buildToolsVersion globalConfiguration.getAt("androidBuildToolsVersion")
 
-  defaultConfig {
-    minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
-    targetSdkVersion globalConfiguration.getAt("androidTargetSdkVersion")
+    defaultConfig {
+        minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
+        targetSdkVersion globalConfiguration.getAt("androidTargetSdkVersion")
 
-    applicationId globalConfiguration.getAt("androidApplicationId")
-    versionCode globalConfiguration.getAt("androidVersionCode")
-    versionName globalConfiguration.getAt("androidVersionName")
-    testInstrumentationRunner globalConfiguration.getAt("testInstrumentationRunner")
-    testApplicationId globalConfiguration.getAt("testApplicationId")
-  }
-
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
-
-  packagingOptions {
-    exclude 'LICENSE.txt'
-    exclude 'META-INF/DEPENDENCIES'
-    exclude 'META-INF/ASL2.0'
-    exclude 'META-INF/NOTICE'
-    exclude 'META-INF/LICENSE'
-  }
-
-  lintOptions {
-    quiet true
-    abortOnError false
-    ignoreWarnings true
-    disable 'InvalidPackage' //Some libraries have issues with this.
-    disable 'OldTargetApi' //Lint gives this warning but SDK 20 would be Android L Beta.
-    disable 'IconDensities' //For testing purpose. This is safe to remove.
-    disable 'IconMissingDensityFolder' //For testing purpose. This is safe to remove.
-  }
-
-  signingConfigs {
-    debug {
-      //      storeFile file('../buildsystem/debug.keystore')
-      //      storePassword 'android'
-      //      keyAlias 'androiddebugkey'
-      //      keyPassword 'android'
+        applicationId globalConfiguration.getAt("androidApplicationId")
+        versionCode globalConfiguration.getAt("androidVersionCode")
+        versionName globalConfiguration.getAt("androidVersionName")
+        testInstrumentationRunner globalConfiguration.getAt("testInstrumentationRunner")
+        testApplicationId globalConfiguration.getAt("testApplicationId")
     }
-  }
 
-  buildTypes {
-    debug {
-      signingConfig signingConfigs.debug
-      debuggable true
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-  }
-  buildToolsVersion '25.0.0'
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+
+    lintOptions {
+        quiet true
+        abortOnError false
+        ignoreWarnings true
+        disable 'InvalidPackage' //Some libraries have issues with this.
+        disable 'OldTargetApi' //Lint gives this warning but SDK 20 would be Android L Beta.
+        disable 'IconDensities' //For testing purpose. This is safe to remove.
+        disable 'IconMissingDensityFolder' //For testing purpose. This is safe to remove.
+    }
+
+    signingConfigs {
+        debug {
+            //      storeFile file('../buildsystem/debug.keystore')
+            //      storePassword 'android'
+            //      keyAlias 'androiddebugkey'
+            //      keyPassword 'android'
+        }
+    }
+
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+            debuggable true
+        }
+    }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
-  def presentationDependencies = rootProject.ext.presentationDependencies
-  def presentationTestDependencies = rootProject.ext.presentationTestDependencies
-  def developmentDependencies = rootProject.ext.developmentDependencies
+    def presentationDependencies = rootProject.ext.presentationDependencies
+    def presentationTestDependencies = rootProject.ext.presentationTestDependencies
+    def developmentDependencies = rootProject.ext.developmentDependencies
 
-  compile project(':domain')
-  compile project(':data')
+    implementation project(':domain')
+    implementation project(':data')
 
-  apt presentationDependencies.daggerCompiler
-  compile presentationDependencies.dagger
-  compile presentationDependencies.butterKnife
-  compile presentationDependencies.recyclerView
-  compile presentationDependencies.rxJava
-  compile presentationDependencies.rxAndroid
-  compile presentationDependencies.glide
-  compile presentationDependencies.androidSupport
-  compile presentationDependencies.flowLayout
-  provided presentationDependencies.javaxAnnotation
+    implementation 'com.android.support:support-compat:25.3.1'
 
-  androidTestCompile presentationTestDependencies.mockito
-  androidTestCompile presentationTestDependencies.dexmaker
-  androidTestCompile presentationTestDependencies.dexmakerMockito
-  androidTestCompile presentationTestDependencies.espresso
-  androidTestCompile presentationTestDependencies.testingSupportLib
+//    implementation presentationDependencies.recyclerView
 
-  testCompile presentationTestDependencies.junit
-  testCompile presentationTestDependencies.mockito
+    annotationProcessor presentationDependencies.daggerCompiler
+    implementation presentationDependencies.dagger
+    implementation presentationDependencies.butterKnife
+    annotationProcessor presentationDependencies.butterKnifeCompiler
+    implementation presentationDependencies.recyclerView
+    implementation presentationDependencies.rxJava
+    implementation presentationDependencies.rxAndroid
+    implementation presentationDependencies.glide
+    implementation presentationDependencies.androidSupport
+    implementation presentationDependencies.flowLayout
+    compileOnly presentationDependencies.javaxAnnotation
 
-  //Development
-  compile developmentDependencies.leakCanary
+    androidTestImplementation presentationTestDependencies.mockito
+    androidTestImplementation presentationTestDependencies.dexmaker
+    androidTestImplementation presentationTestDependencies.dexmakerMockito
+    androidTestImplementation presentationTestDependencies.espresso
+    androidTestImplementation presentationTestDependencies.testingSupportLib
+
+    testImplementation presentationTestDependencies.junit
+    testImplementation presentationTestDependencies.mockito
+
+    //Development
+    implementation developmentDependencies.leakCanary
 }
