--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -1,6 +1,10 @@
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
+        google()
     }
 }
 
@@ -9,13 +13,12 @@ ext {
     androidBuildToolsVersion = "24.0.1"
     androidMinSdkVersion = 15
     androidTargetSdkVersion = 21
-    androidCompileSdkVersion = 21
+    androidCompileSdkVersion = 27
 
     //Libraries
     recyclerViewVersion = '25.3.1'
     daggerVersion = '2.8'
     butterKnifeVersion = '8.8.1'
-    recyclerViewVersion = '21.0.3'
     rxJavaVersion = '2.1.0'
     rxAndroidVersion = '2.0.1'
     javaxAnnotationVersion = '1.0'
@@ -28,7 +31,7 @@ ext {
     retrofitCoverterVersion = '2.1.0'
     interceptorVersion = '3.4.1'
     retrofitAdapterVersion = '2.2.0'
-    glideVersion = '4.0.0'
+    glideVersion = '4.7.1'
     androidSupportVersion = '25.3.1'
     flowLayoutVersion = '1.10@aar'
 
@@ -45,16 +48,16 @@ ext {
     leakCanaryVersion = '1.3.1'
 
     presentationDependencies = [
-            recyclerview       : "com.android.support:recyclerview-v7:${recyclerViewVersion}",
+            recyclerView       : "com.android.support:recyclerview-v7:${recyclerViewVersion}",
             daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
             dagger             : "com.google.dagger:dagger:${daggerVersion}",
             butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
             butterKnifeCompiler: "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",
-            recyclerView       : "com.android.support:recyclerview-v7:${recyclerViewVersion}",
             rxJava             : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
             rxAndroid          : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
             javaxAnnotation    : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
             glide              : "com.github.bumptech.glide:glide:${glideVersion}",
+            glideAnnotations   : "com.github.bumptech.glide:compiler:${glideVersion}",
             androidSupport     : "com.android.support:support-v4:${androidSupportVersion}",
             flowLayout         : "org.apmem.tools:layouts:${flowLayoutVersion}"
     ]
