--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -66,10 +66,6 @@ dependencies {
     implementation project(':domain')
     implementation project(':data')
 
-    implementation 'com.android.support:support-compat:25.3.1'
-
-//    implementation presentationDependencies.recyclerView
-
     annotationProcessor presentationDependencies.daggerCompiler
     implementation presentationDependencies.dagger
     implementation presentationDependencies.butterKnife
@@ -78,6 +74,7 @@ dependencies {
     implementation presentationDependencies.rxJava
     implementation presentationDependencies.rxAndroid
     implementation presentationDependencies.glide
+    annotationProcessor presentationDependencies.glideAnnotations
     implementation presentationDependencies.androidSupport
     implementation presentationDependencies.flowLayout
     compileOnly presentationDependencies.javaxAnnotation
